modified css to prevent hiding addressbar on mobile for better swiping experience

--- a/public/style.css
+++ b/public/style.css
@@ -14,11 +14,15 @@
   font-size: var(--font-size);
 }
 
-
+html {
+  overflow: hidden;
+  width: 100%;
+}
 
 body {
+  height: 100%;
+  width: 100%;
   position: fixed;
-  inset: 0;
   -webkit-overflow-scrolling: touch;
   /* iOS velocity scrolling */
   display: flex;
